--- a/index.html
+++ b/index.html
@@ -25,17 +25,10 @@
             (n.className += t + "touch");
       })(window, document);
     </script>
-    <link
-      href="https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651742d307d3d225ad6d1a24_IMG_4326.png"
-      rel="shortcut icon"
-      type="image/x-icon"
-    />
-    <link
-      href="https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651742d8b1043edfbce430cd_IMG_4326%20(1).png"
-      rel="apple-touch-icon"
-    />
+    <link href="/images/logo.jpg" rel="shortcut icon" type="image/x-icon" />
+    <link href="/images/logo.jpg" rel="apple-touch-icon" />
   </head>
-  <body class="body">
+  <body class="body" style="background-image: none">
     <section class="section">
       <div
         data-animation="default"
@@ -52,21 +45,15 @@
         <div class="w-container">
           <a href="#" class="w-nav-brand"
             ><img
-              src="https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65173174c55902935d03a350_IMG_4327.png"
+              src="/images/logo.jpg"
               loading="lazy"
               width="56"
               sizes="55.99609375px"
               alt=""
-              srcset="
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65173174c55902935d03a350_IMG_4327-p-500.png   500w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65173174c55902935d03a350_IMG_4327-p-800.png   800w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65173174c55902935d03a350_IMG_4327-p-1080.png 1080w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65173174c55902935d03a350_IMG_4327-p-1600.png 1600w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65173174c55902935d03a350_IMG_4327.png        2000w
-              "
           /></a>
           <nav role="navigation" class="w-nav-menu">
-            <a href="twitterlink" class="w-nav-link">TWITTER</a
+            <a href="https://twitter.com/sectokenerc" class="w-nav-link"
+              >TWITTER</a
             ><a href="tglink" class="w-nav-link">TELEGRAM</a
             ><a href="dextoollink" class="w-nav-link">DEXTOOLS</a
             ><a
@@ -81,19 +68,9 @@
     </section>
     <section class="section-2">
       <img
-        src="https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/6518730c155bcd98bac38690_IMG_4455-min.PNG"
+        src="/images/ban.jpg"
         loading="lazy"
         sizes="100vw"
-        srcset="
-          https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/6518730c155bcd98bac38690_IMG_4455-min-p-500.png   500w,
-          https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/6518730c155bcd98bac38690_IMG_4455-min-p-800.png   800w,
-          https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/6518730c155bcd98bac38690_IMG_4455-min-p-1080.png 1080w,
-          https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/6518730c155bcd98bac38690_IMG_4455-min-p-1600.png 1600w,
-          https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/6518730c155bcd98bac38690_IMG_4455-min-p-2000.png 2000w,
-          https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/6518730c155bcd98bac38690_IMG_4455-min-p-2600.png 2600w,
-          https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/6518730c155bcd98bac38690_IMG_4455-min-p-3200.png 3200w,
-          https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/6518730c155bcd98bac38690_IMG_4455-min.PNG        3556w
-        "
         alt=""
         class="image-3"
       />
@@ -105,18 +82,12 @@
       <div class="w-layout-blockcontainer container w-container">
         <h1 class="heading">Welcome to $SEC</h1>
         <p class="paragraph">
-          Step into the realm of StockExchangeSpxNasdaqDowJones, where the
-          world&#x27;s most trusted financial systems are given a modern twist.
-          Here, the pillars of the financial world are reimagined, rebuilt, and
-          rejuvenated with cutting-edge technology, ensuring a stable foundation
-          for the financial innovations of tomorrow.<br />
+          Join us on this intergalactic journey to the moon as we take meme
+          coins to a whole new level. With a passionate community of meme
+          enthusiasts and crypto aficionados, we're on a mission to make trading
+          fun again.<br />
         </p>
-        <img
-          src="https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651876501b5b8c2eda9e634f_20230930-12_2023_09_30_22_59_43.gif.gif"
-          loading="lazy"
-          width="910"
-          alt=""
-        />
+        <img src="/images/ban2.jpg" loading="lazy" width="910" alt="" />
         <div
           id="w-node-_0ac7074a-5d8c-359d-b33d-8444c9178b86-5b1868cd"
           class="w-layout-layout wf-layout-layout"
@@ -126,42 +97,28 @@
             class="w-layout-cell"
           >
             <p class="paragraph-2">
-              Dive deeper, and you&#x27;ll find a vibrant community of
-              mavericks, visionaries, and pioneers, all driven by a singular
-              purpose: To mold the future of finance. This is not just about
-              embracing change; it&#x27;s about leading it. Join us, as we take
-              a monumental leap forward, intertwining the best of what was with
-              the promise of what&#x27;s to come.
+              "Buy $SEC or we are suing you"."Gary Gensler approves every
+              degenerate to buy $SEC"
             </p>
           </div>
           <div
             id="w-node-d495ec6e-543d-278e-2c58-d3e541775756-5b1868cd"
             class="w-layout-cell"
           >
-            <img
-              src="https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651873dd5d86eb8b1c9d8410_20230930_2023_09_30_23_47_57.gif.gif"
-              loading="lazy"
-              alt=""
-              class="image"
-            />
+            <img src="images/ban3.jpg" loading="lazy" alt="" class="image" />
           </div>
           <div
             id="w-node-_56245ec9-4f6b-03cd-70a5-df9045483214-5b1868cd"
             class="w-layout-cell"
           >
-            <img
-              src="https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651873eb5d86eb8b1c9d92d2_20230930-2_2023_09_30_23_48_36.gif.gif"
-              loading="lazy"
-              width="565"
-              alt=""
-            />
+            <img src="images/sl1.jpg" loading="lazy" width="565" alt="" />
           </div>
           <div
             id="w-node-_4b7fcfcc-de15-e1a1-a9ce-537459822736-5b1868cd"
             class="w-layout-cell"
           >
             <img
-              src="https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651873fa5016f10da98a7002_20230930-1_2023_09_30_23_47_29.gif.gif"
+              src="/images/sl2.jpg"
               loading="lazy"
               width="501"
               alt=""
@@ -202,18 +159,8 @@
     <section>
       <div class="w-layout-blockcontainer w-container">
         <img
-          src="https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65187473b33f87e6f4ba2654_IMG_4456-min.PNG"
+          src="/images/sl8.jpg"
           sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px"
-          srcset="
-            https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65187473b33f87e6f4ba2654_IMG_4456-min-p-500.png   500w,
-            https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65187473b33f87e6f4ba2654_IMG_4456-min-p-800.png   800w,
-            https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65187473b33f87e6f4ba2654_IMG_4456-min-p-1080.png 1080w,
-            https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65187473b33f87e6f4ba2654_IMG_4456-min-p-1600.png 1600w,
-            https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65187473b33f87e6f4ba2654_IMG_4456-min-p-2000.png 2000w,
-            https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65187473b33f87e6f4ba2654_IMG_4456-min-p-2600.png 2600w,
-            https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65187473b33f87e6f4ba2654_IMG_4456-min-p-3200.png 3200w,
-            https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65187473b33f87e6f4ba2654_IMG_4456-min.PNG        5517w
-          "
           alt=""
         />
       </div>
@@ -229,18 +176,9 @@
             class="w-layout-cell"
           >
             <img
-              src="https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875746c76388b6477a8ea_IMG_4467-min.PNG"
+              src="/images/sl1.jpg"
               loading="lazy"
               sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px"
-              srcset="
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875746c76388b6477a8ea_IMG_4467-min-p-500.png   500w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875746c76388b6477a8ea_IMG_4467-min-p-800.png   800w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875746c76388b6477a8ea_IMG_4467-min-p-1080.png 1080w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875746c76388b6477a8ea_IMG_4467-min-p-1600.png 1600w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875746c76388b6477a8ea_IMG_4467-min-p-2000.png 2000w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875746c76388b6477a8ea_IMG_4467-min-p-2600.png 2600w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875746c76388b6477a8ea_IMG_4467-min.PNG        3000w
-              "
               alt=""
             />
           </div>
@@ -249,18 +187,9 @@
             class="w-layout-cell"
           >
             <img
-              src="https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/6518759199cb2c2245b68674_IMG_4457-min.PNG"
+              src="images/sl2.jpg"
               loading="lazy"
               sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px"
-              srcset="
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/6518759199cb2c2245b68674_IMG_4457-min-p-500.png   500w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/6518759199cb2c2245b68674_IMG_4457-min-p-800.png   800w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/6518759199cb2c2245b68674_IMG_4457-min-p-1080.png 1080w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/6518759199cb2c2245b68674_IMG_4457-min-p-1600.png 1600w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/6518759199cb2c2245b68674_IMG_4457-min-p-2000.png 2000w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/6518759199cb2c2245b68674_IMG_4457-min-p-2600.png 2600w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/6518759199cb2c2245b68674_IMG_4457-min.PNG        3000w
-              "
               alt=""
             />
           </div>
@@ -269,18 +198,9 @@
             class="w-layout-cell"
           >
             <img
-              src="https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875a1d58f92305a32db54_IMG_4458-min.PNG"
+              src="/images/sl3.jpg"
               loading="lazy"
               sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px"
-              srcset="
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875a1d58f92305a32db54_IMG_4458-min-p-500.png   500w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875a1d58f92305a32db54_IMG_4458-min-p-800.png   800w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875a1d58f92305a32db54_IMG_4458-min-p-1080.png 1080w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875a1d58f92305a32db54_IMG_4458-min-p-1600.png 1600w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875a1d58f92305a32db54_IMG_4458-min-p-2000.png 2000w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875a1d58f92305a32db54_IMG_4458-min-p-2600.png 2600w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875a1d58f92305a32db54_IMG_4458-min.PNG        3000w
-              "
               alt=""
             />
           </div>
@@ -289,18 +209,9 @@
             class="w-layout-cell"
           >
             <img
-              src="https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65176fa1d6409bc0542514f7_IMG_4376.JPG"
+              src="/images/sl4.jpg"
               loading="lazy"
               sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px"
-              srcset="
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65176fa1d6409bc0542514f7_IMG_4376-p-500.jpg   500w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65176fa1d6409bc0542514f7_IMG_4376-p-800.jpg   800w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65176fa1d6409bc0542514f7_IMG_4376-p-1080.jpg 1080w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65176fa1d6409bc0542514f7_IMG_4376-p-1600.jpg 1600w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65176fa1d6409bc0542514f7_IMG_4376-p-2000.jpg 2000w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65176fa1d6409bc0542514f7_IMG_4376-p-2600.jpg 2600w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65176fa1d6409bc0542514f7_IMG_4376.JPG        3000w
-              "
               alt=""
             />
           </div>
@@ -309,18 +220,9 @@
             class="w-layout-cell"
           >
             <img
-              src="https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65176fa5456364205c70aa25_IMG_4377.JPG"
+              src="/images/sl5.jpg"
               loading="lazy"
               sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px"
-              srcset="
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65176fa5456364205c70aa25_IMG_4377-p-500.jpg   500w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65176fa5456364205c70aa25_IMG_4377-p-800.jpg   800w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65176fa5456364205c70aa25_IMG_4377-p-1080.jpg 1080w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65176fa5456364205c70aa25_IMG_4377-p-1600.jpg 1600w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65176fa5456364205c70aa25_IMG_4377-p-2000.jpg 2000w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65176fa5456364205c70aa25_IMG_4377-p-2600.jpg 2600w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/65176fa5456364205c70aa25_IMG_4377.JPG        3000w
-              "
               alt=""
             />
           </div>
@@ -329,24 +231,21 @@
             class="w-layout-cell"
           >
             <img
-              src="https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875825d86eb8b1c9ef3c1_IMG_4460-min.PNG"
+              src="/images/sl6.jpg"
               loading="lazy"
               sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px"
-              srcset="
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875825d86eb8b1c9ef3c1_IMG_4460-min-p-500.png   500w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875825d86eb8b1c9ef3c1_IMG_4460-min-p-800.png   800w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875825d86eb8b1c9ef3c1_IMG_4460-min-p-1080.png 1080w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875825d86eb8b1c9ef3c1_IMG_4460-min-p-1600.png 1600w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875825d86eb8b1c9ef3c1_IMG_4460-min-p-2000.png 2000w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875825d86eb8b1c9ef3c1_IMG_4460-min-p-2600.png 2600w,
-                https://uploads-ssl.webflow.com/6517267de47e3fcf5b1868ca/651875825d86eb8b1c9ef3c1_IMG_4460-min.PNG        3000w
-              "
               alt=""
             />
           </div>
         </div>
       </div>
     </section>
+
+    <sections style="text-align: center; padding: 100px 0">
+      <h2 style="color: #000; margin: 100px 0">
+        "THIS IS ENTERTAINMENT PURPOSES ONLY, ONLY MEMES."
+      </h2>
+    </sections>
     <script
       src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6517267de47e3fcf5b1868ca"
       type="text/javascript"
