--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
       </div>
     </section>
-    <section class="section-2">
+    <section class="section-2" style="width: 897px; margin: 0 auto">
       <img
         src="/images/ban.jpg"
         loading="lazy"
@@ -139,7 +139,7 @@
             id="w-node-f8ab8c80-0148-8aff-cb5b-2a309af35c05-5b1868cd"
             class="w-layout-cell cell"
           >
-            <h1 class="heading-6">2%<br />Final Sell Tax</h1>
+            <h1 class="heading-6">1%<br />Final Sell Tax</h1>
           </div>
           <div
             id="w-node-_60f8e177-98b7-ac99-9354-a6cb55b6d17c-5b1868cd"
@@ -151,7 +151,7 @@
             id="w-node-_956eca53-597f-540f-ffd2-2f5f14d06032-5b1868cd"
             class="w-layout-cell cell-3"
           >
-            <h1 class="heading-5">2%<br />Final Buy Tax</h1>
+            <h1 class="heading-5">1,000,000,000<br />Supply</h1>
           </div>
         </div>
       </div>
