--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
             id="w-node-f8ab8c80-0148-8aff-cb5b-2a309af35c05-5b1868cd"
             class="w-layout-cell cell"
           >
-            <h1 class="heading-6">1%<br />Final Sell Tax</h1>
+            <h1 class="heading-6">1%<br />Final Sell/Buy Tax</h1>
           </div>
           <div
             id="w-node-_60f8e177-98b7-ac99-9354-a6cb55b6d17c-5b1868cd"
             class="w-layout-cell cell-2"
           >
-            <h1 class="heading-4">Fair<br />Launch</h1>
+            <!-- <h1 class="heading-4">Fair<br />Launch</h1> -->
           </div>
           <div
             id="w-node-_956eca53-597f-540f-ffd2-2f5f14d06032-5b1868cd"
