--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
     </script>
     <link href="/images/logo.jpg" rel="shortcut icon" type="image/x-icon" />
     <link href="/images/logo.jpg" rel="apple-touch-icon" />
+    <style>
+      .section-2 {
+        width: 897px;
+        margin: 0 auto;
+      }
+
+      @media screen and (max-width: 768px) {
+        .section-2 {
+          width: 100%;
+          margin: 0 auto;
+        }
+      }
+    </style>
   </head>
   <body class="body" style="background-image: none">
     <section class="section">
@@ -40,7 +53,9 @@
         class="navbar w-nav"
       >
         <div class="w-layout-blockcontainer w-container">
-          <h1 class="heading-3">ca: 0X000000000000000000000000000000000</h1>
+          <h1 class="heading-3">
+            ca: 0xeCF544FF9CeA4C76185edd1aD482AC92512CebDa
+          </h1>
         </div>
         <div class="w-container">
           <a href="#" class="w-nav-brand"
@@ -54,10 +69,10 @@
           <nav role="navigation" class="w-nav-menu">
             <a href="https://twitter.com/sectokenerc" class="w-nav-link"
               >TWITTER</a
-            ><a href="tglink" class="w-nav-link">TELEGRAM</a
+            ><a href="https://t.me/secerc" class="w-nav-link">TELEGRAM</a
             ><a href="dextoollink" class="w-nav-link">DEXTOOLS</a
             ><a
-              href="https://app.uniswap.org/tokens/ethereum/0X000000000000000000000000000000000"
+              href="https://app.uniswap.org/tokens/ethereum/0xeCF544FF9CeA4C76185edd1aD482AC92512CebDa"
               class="w-nav-link"
               >UNISWAP</a
             >
@@ -66,7 +81,7 @@
         </div>
       </div>
     </section>
-    <section class="section-2" style="width: 897px; margin: 0 auto">
+    <section class="section-2">
       <img
         src="/images/ban.jpg"
         loading="lazy"
@@ -139,7 +154,10 @@
             id="w-node-f8ab8c80-0148-8aff-cb5b-2a309af35c05-5b1868cd"
             class="w-layout-cell cell"
           >
-            <h1 class="heading-6">1%<br />Final Sell/Buy Tax</h1>
+            <h1 class="heading-6">
+              1%<br />
+              Sell/Buy Tax
+            </h1>
           </div>
           <div
             id="w-node-_60f8e177-98b7-ac99-9354-a6cb55b6d17c-5b1868cd"
