--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       }
     </style>
   </head>
-  <body class="body" style="background-image: none">
+  <body class="body" style="background-image: none; background-color: #f7f7f7">
     <section class="section">
       <div
         data-animation="default"
@@ -51,6 +51,7 @@
         data-easing2="ease"
         role="banner"
         class="navbar w-nav"
+        style="background-color: #f7f7f7; margin-bottom: 60px"
       >
         <div class="w-layout-blockcontainer w-container">
           <h1 class="heading-3">
@@ -70,7 +71,10 @@
             <a href="https://twitter.com/sectokenerc" class="w-nav-link"
               >TWITTER</a
             ><a href="https://t.me/secerc" class="w-nav-link">TELEGRAM</a
-            ><a href="dextoollink" class="w-nav-link">DEXTOOLS</a
+            ><a
+              href="https://www.dextools.io/app/en/ether/pair-explorer/0x603eb51cd4884df601e16d49a74343ace2546612"
+              class="w-nav-link"
+              >DEXTOOLS</a
             ><a
               href="https://app.uniswap.org/tokens/ethereum/0xeCF544FF9CeA4C76185edd1aD482AC92512CebDa"
               class="w-nav-link"
