--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
       }
     </style>
   </head>
-  <body class="body" style="background-image: none; background-color: #f7f7f7">
+  <body
+    class="body"
+    style="background-color: #ffdd00a5; background-image: none"
+  >
     <section class="section">
       <div
         data-animation="default"
@@ -51,7 +54,7 @@
         data-easing2="ease"
         role="banner"
         class="navbar w-nav"
-        style="background-color: #f7f7f7; margin-bottom: 60px"
+        style="background-color: #ffdd00a8; margin-bottom: 60px"
       >
         <div class="w-layout-blockcontainer w-container">
           <h1 class="heading-3">
